overflow-x fix test

--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,12 @@
   font-size: 1.1em;
   font: inherit;
   vertical-align: baseline;
+  overflow-x: hidden;
 }
 
 html, body{
   height: 100%;
-
+  overflow-x: hidden;
 }
 
 body{
